--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Main]
 csvRight=D:\\SICKCameraConfig\\RightSickConfigFile_MotionPattern.csv
 calibxmlRight=D:\\SICKCameraConfig\\Right-CalibrationResult.xml
-csvLeft=D:\\SICKCameraConfig\\LeftSickConfigFile_MotionPattern.csv
+csvLeft=D:\\SICKCameraConfig\\RightSickConfigFile.csv
 calibxmlLeft="D:\\SICKCameraConfig\\Left-CalibrationResult.xml
