--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [Main]
-csvRight=D:\\SICKCameraConfig\\RightSickConfigFile_MotionPattern.csv
-calibxmlRight=D:\\SICKCameraConfig\\Right-CalibrationResult.xml
-csvLeft=D:\\SICKCameraConfig\\RightSickConfigFile.csv
-calibxmlLeft="D:\\SICKCameraConfig\\Left-CalibrationResult.xml
+csvRight=D:\\work\\CameraTest\\SickConfigFile0727\\right-cameraConfig.csv
+calibxmlRight=D:\\work\\CameraTest\\SickConfigFile0727\\Right-CalibrationResult.xml
+csvLeft=D:\\work\\CameraTest\\SickConfigFile0727\\left_cameraConfig.csv
+calibxmlLeft=D:\\work\\CameraTest\\SickConfigFile0727\\Left-CalibrationResult.xml
+#csvRight=D:\\work\\CameraTest\\SickConfigFile0727\\right-cameraConfig2000.csv
